# Dual-Spherical-Shell

./: NI_model.py  environment.yml  meshDataset.py  oversdf_default.py  readTest.py  readme.md  train.py
net_and_latent/: oversdf_default_wylPE.py
submodules/geolab-copy/: .gitmodules  CMakeLists.txt  README.md  build.sh  camera.txt  hit.txt  imgui.ini  positions.txt
submodules/geolab-copy/data/: 44234.stl  53750.stl  91120.stl  frame_26.npz
submodules/geolab-copy/data/shaders/: basic.shader  coordinate.shader  lattice.shader  lattice1.shader  light.shader  light_sphere.shader  polygon_edge.shader
submodules/geolab-copy/include/: ray_tracer_utils.cuh  sdfgenerator.cuh
submodules/geolab-copy/include/geometry/: boundingbox.cuh  mesh.h  sdf.cuh  triangle.cuh  trianglebvh.cuh  tribox3.h  voxel.cuh
submodules/geolab-copy/include/geometry/polygon/: cube.h  icosphere.h  polygon.h
submodules/geolab-copy/include/io/: obj_loader.h  stl_reader.h
submodules/geolab-copy/include/renderer/: camera.cuh  gl_renderer.cuh  m_glfw_imgui_utils.cuh  reference.h  renderer.cuh  scene.cuh
submodules/geolab-copy/include/sampler/: space_sampler.cuh  sphere_sampler.h  triangle_sampler.cuh
submodules/geolab-copy/include/utils/: common.cuh  gpubuffer.cuh  gpumemory.cuh  m_cuda_utils.cuh  m_optix_program.h  m_optix_utils.cuh  math_ex.cuh  random.cuh
submodules/geolab-copy/scripts/: experiment.py  experiment_voxelize.py  metrics.py  ray-tracer.py  sample.py  sdf-generator.py  sdf-renderer.py  voxel.py
submodules/geolab-copy/src/: glrenderer.cu  polygon.cu  python-api.cu  ray_tracer_utils.cu  renderer.cu  trianglebvh.cu  voxel.cu
submodules/geolab-copy/src/optix/: pathescape.cu  pathescape.h  ray_trace.cu  ray_trace.h  raystab.cu  raystab.h
utils/: spherelatent.py
utils/lib/tracer/: __init__.py
